--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 <body class="body">
   <header class="header">
-    <nav class="header__nav nav">
-      <a href="#" class="nav__logo logo">Company Name</a>
+    <nav class="header__nav">
+      <a href="#" class="nav__logo">Company Name</a>
       <a href="#" class="nav__link">Home</a>
       <a href="#" class="nav__link">Contact</a>
     </nav>
   </header>
   <main class="main">
-    <section class="main__hero hero">
-      <p class="hero__call-to-action call-to-action">This is a call to action. It makes you want to click the button below.</p>
-      <button class="hero__button button">click now</button>
+    <section class="main__hero">
+      <p class="hero__call-to-action">This is a call to action. It makes you want to click the button below.</p>
+      <button class="hero__button">click now</button>
     </section>
-    <article class="main__article article">
+    <article class="main__article">
       <h1 class="article__heading">Main Heading</h1>
       <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium mollitia, consequatur eaque, odio repellat optio quis dolore dolorem laboriosam voluptatibus, aliquam beatae debitis sequi minus expedita accusantium distinctio voluptas maiores modi <a href="#" class="article__link">ad id nobis aspernatur deleniti!</a> Dolorem totam quam fugiat, iste, recusandae quod voluptate a maiores numquam sapiente velit consectetur necessitatibus possimus natus fugit aut assumenda corrupti magnam. Sequi voluptatibus cumque, commodi at sit facere dicta sed eaque, eligendi consectetur asperiores fuga odio ab saepe incidunt obcaecati perferendis, iure reprehenderit accusantium ipsum dolorum aperiam neque. Corrupti vitae tempora repellendus numquam! Veniam quasi eius eum ratione natus doloremque recusandae consequuntur exercitationem?</p>
       <img src="https://picsum.photos/500/500" alt="random image" class="article__image">
